Changelog
=========


2.14.2 (unreleased)
-------------------

- Do not mark upgrade steps as installed when not doing a full import. [jone]


2.14.1 (2019-11-08)
-------------------

- Migrate creators even when dublin core behaviors are not enabled. [jone]

- Migrate empty values in RichTextFields correctly.
  Fixes `https://github.com/4teamwork/izug.refegovservice/issues/2`. [djowett-ftw]


2.14.0 (2019-10-31)
-------------------

- Added ``--allow-outdated`` option to ``install`` command.
  This allows installing upgrades or profiles on a not up-to-date site.
  Fixes `issue 182 <https://github.com/4teamwork/ftw.upgrade/issues/182>`. [maurits]


2.13.0 (2019-08-22)
-------------------

- Added combine_bundles command for Plone 5.
  This combines JS/CSS bundles together.  [maurits]


2.12.2 (2019-06-19)
-------------------

- Make sure to always use a portal_migration tool wrapped in a RequestContainer.
  (Fixes "AttributeError: REQUEST" on a Plone 5.1.x upgrade) [lgraf]


2.12.1 (2019-06-18)
-------------------

- Choose actual port used by ZServer layer to run CommandAndInstance tests against. [lgraf]
- Disable Diazo on upgrades-plain for Plone 5.1.5 support. [jone]


2.12.0 (2018-07-26)
-------------------

- Allow marking upgrades as deferred so they won't be proposed by default. [deiferni]


2.11.1 (2018-04-05)
-------------------

- Fix connection problem when zope.conf contains ip-address. [jone]
- Make sure remove_broken_browserlayer() helper doesn't fail if the browser
  layer registration to be removed doesn't exist (any more). [lgraf]


2.11.0 (2018-01-31)
-------------------

- Provide upgrade step handler interfaces and handler class in wrapper. [jone]
- Do not propose executed upgrades newer than current db version. [jone]


2.10.0 (2018-01-08)
-------------------

- Support installing proposed upgrades of specific Generic Setup profiles.
  Use ``bin/upgrade install --proposed the.package:default``. [jone]


2.9.0 (2017-12-14)
------------------
